--- a/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
+++ b/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
@@ -348,14 +348,6 @@ list(
       class_labels = c("GL", "HGL", "HOL", "OL")),
     pattern = map(perimeters_data, plus_sb)
   ),
-  tar_target(
-    name = plus_visibility,
-    command = add_visibility_to_frame(
-      punten_sf = plus_openheid_landschap,
-      resolution = 5,
-      spacing = 10),
-    pattern = map(plus_openheid_landschap)
-  ),
   tar_target(name = sbp_akkervogels,
              command = read_sbp_akkervogels(
                path = sbp_akkervogels_file,
@@ -364,9 +356,9 @@ list(
              pattern = map(perimeters_data)),
   tar_target(
     name = steekproefkader_finaal,
-    command = add_stratum_sbp(punten_sf = plus_visibility,
+    command = add_stratum_sbp(punten_sf = plus_openheid_landschap,
                               sbp = sbp_akkervogels),
-    pattern = map(sbp_akkervogels, plus_visibility)
+    pattern = map(sbp_akkervogels, plus_openheid_landschap)
   )
 )
 ```
@@ -385,7 +377,7 @@ list(
     allocatie(steekproefkader = steekproefkader_finaal,
               min_samplesize = 200,
               target_samplesize = 9887,
-              popsize_minimum = 9887,
+              popsize_minimum = 200/0.05,
               allocatie_binnen_sbp = 0.5,
               allocatie_leemstreek = 0,
               ol_strata = c("OL", "HOL"))
@@ -423,7 +415,9 @@ list(
   tar_target(
     steekproef_zichtbaarheid,
     filter_zichtbaarheid(sample = steekproef,
-                         min_cvvi = 0.1),
+                         min_cvvi = 0.1,
+                         resolution = 5,
+                         spacing = 10),
     pattern = map(steekproef)
   ),
   tar_target(
