--- a/src/markdown/mas/steekproefontwerp_zandleemstreek.Rmd
+++ b/src/markdown/mas/steekproefontwerp_zandleemstreek.Rmd
@@ -9,9 +9,12 @@ output:
     toc: true
     toc_float: true
     toc_collapsed: true
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r setup, include=FALSE}
+# set up
 library(knitr)
 library(here)
 opts_chunk$set(
@@ -21,7 +24,49 @@ opts_chunk$set(
   out.width = "100%")
 opts_knit$set(root.dir = here::here())
 
+# packages
+library(tidyverse)
+library(targets)
+library(sf)
+library(mapview)
+
+# globals
+source(here("src", "R", "steekproefkader.R"))
 source(here("src", "R", "wfs_wcs.R"))
-targets_store <- here("src", "targets", "mas_steekproef_pilootfase", "_targets")
+targets_store <- here("src", "targets", "mas_steekproef_zavelberg", "_targets")
 ```
 
+# Afbakening steekproefkader
+
+## Perimeter bepalen
+
+Intersectie landbouwstreek zandleemstreek in België met contour Vlaanderen. Nieuwe file geschreven "zandleemstreek_perimeters.gpkg" met enkel de zandleemstreek multipolygoon.
+
+```{r, eval=FALSE}
+# Code uitvoeren in mas_steekproef_zavelberg.Rproj
+# na laden van globals in targets_steekproef_zavelberg.Rmd
+
+library(sf)
+
+# Lees in polygonen landbouwstreken
+landbouwstreken <- read_sf(file.path(mbag_dir, "data", "landbouwstreken", 
+                                     "Lbstrbel.shp")) |>
+  st_transform(crs = 31370)
+
+# Behoud Zandleemstreek
+vlaanderen <- read_sf("S:/Vlaanderen/Grenzen/Administratief/Vlaanderen.shp") |>
+  st_transform(crs = 31370)
+
+zandleem_vlaanderen <- st_intersection(landbouwstreken, vlaanderen) |>
+  filter(NAAM == "Zandleemstreek") |>
+  mutate(section = NA) |>
+  select(Naam = NAAM, section, geom = geometry)
+
+st_write(obj = zandleem_vlaanderen,
+         dsn = path_to_perimeters("zandleemstreek_perimeters.gpkg"))
+```
+
+```{r}
+perimeters <- tar_read(perimeters_data, store = targets_store)
+mapview(perimeters)
+```
